[metadata]
name = netflix-spectator-py
version = 1.1.0
description = Library for reporting metrics from Python applications to SpectatorD and the Netflix Atlas Timeseries Database.
long_description = file: README.md
long_description_content_type = text/markdown
author = Netflix Telemetry Engineering
author_email = netflix-atlas@googlegroups.com
license = Apache 2.0
url = https://github.com/Netflix/spectator-py

[options]
python_requires = >=3.8
packages =
    spectator
    spectator.meter
    spectator.writer

[options.extras_require]
dev =
    check-manifest
    pylint
    pytest-cov
    pytest
